# Long-Document-Scientific-Summarization

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  docker-compose.yml  hf_space_app.py  pyproject.toml  render.yaml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: gradio_app.py
colab/: scisum_qwen_colab.ipynb
configs/: data.yaml  eval.yaml  inference.yaml  train_qlora.yaml  train_qlora_colab.yaml
data/colab/: README.md  test_subset.jsonl
data/samples/: featured_demo_paper.txt  sample_processed.jsonl
examples/: api_request.json  curl_summarize.sh
models/qwen-arxiv-qlora-colab/: adapter_config.json
notebooks/: 01_dataset_exploration.ipynb  02_zero_shot_baselines.ipynb  03_error_analysis.ipynb
reports/: baseline_eval.md  baseline_metrics.csv  baseline_outputs.md  dataset_report.md  error_analysis.md  evidence_examples.md  experiment_report.md  long_document_results.md  manual_review_template.csv  model_card.md  model_comparison.csv  public_space_validation.md  sample_outputs.md  training_log.md
reports/colab_runs/: README.md  (+5 more)
scripts/: build_colab_subset.py  deploy_hf_space.py  install_adapter.py  package_colab.py  smoke_test_api.py  test_public_space.py
tests/: test_api.py  test_chunker.py  test_claim_extractor.py  test_compare_and_error_analysis.py  test_demo.py  test_evaluation.py  test_extractive.py  test_hierarchical.py  test_preprocess.py  test_prompts.py  test_section_parser.py  test_service.py  test_sft_dataset.py  test_support_scorer.py  test_training.py
(+40 files in other folders)
