[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scisum-qwen"
version = "0.1.0"
description = "Faithful long-document scientific paper summarization with Qwen and QLoRA."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mohammadreza Karami" }
]
dependencies = [
  "PyYAML>=6.0",
  "datasets>=2.19.0",
  "evaluate>=0.4.2",
  "transformers>=4.44.0",
  "accelerate>=0.34.0",
  "peft>=0.12.0",
  "torch>=2.4.0",
  "sentence-transformers>=3.0.1",
  "faiss-cpu>=1.8.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "gradio>=4.40.0",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.1",
  "networkx>=3.3",
  "bitsandbytes>=0.43.3; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

